
syntax = "proto3";

package Pocker;

service StreamService {
  rpc ConnectAsync (stream StreamRequest) returns (stream StreamResponse) {}    
}

message StreamRequest {
  string username = 1;
  int32 Row=2;
  int32 Count=3;
  //1: connect, 2:send data, 255:exit
  int32 type = 4;
}

message StreamResponse {
  string username = 1;
  string message = 2;
  string remaining = 3;
}